--- a/index.html
+++ b/index.html
@@ -10,40 +10,38 @@
     <img src="media/great.jpg">
   </div>
   <ul>
-    <li><a href="#astrology1">one</a></li>
-    <li><a href="#astrology2">two</a></li>
-    <li><a href="#astrology3">three</a></li>
-    <li><a href="#astrology4">four</a></li>
-    <li><a href="#astrology5">five</a></li>
+    <li><a href="#astrology1">cigarettes</a></li>
+    <li><a href="#astrology2">umbrella</a></li>
+    <li><a href="#astrology3">caution</a></li>
+    <li><a href="#astrology4">chicago</a></li>
   </ul>
   <div id="libra">
-    <div id="blah">
+    <div id="slider">
       <figure>
         <img src="media/cigarettes.jpg">
         <img src="media/umbrella.jpg">
         <img src="media/caution.jpg">
         <img src="media/chicago.jpg">
-        <img src="media/cigarettes.jpg">
       </figure>
     </div>
   </div>
-    
+
   <div id="libra">
-    <h1 id="astrology1">astrology 1</h1>
-      Random nonsense about Libras here! Random nonsense about Libras here! Random nonsense about Libras here! Random nonsense about Libras here! Random nonsense about Libras here! Random nonsense about Libras here! Random nonsense about Libras here! Random nonsense about Libras here! Random nonsense about Libras here! Random nonsense about Libras here! Random nonsense about Libras here! Random nonsense about Libras here! Random nonsense about Libras here! Random nonsense about Libras here!
-  <div id="gemini">
-    <h1 id="astrology2">astrology 2</h1>
-      Random nonsense about Geminis here! Random nonsense about Geminis here! Random nonsense about Geminis here! Random nonsense about Geminis here! Random nonsense about Geminis here! Random nonsense about Geminis here! Random nonsense about Geminis here! Random nonsense about Geminis here! Random nonsense about Geminis here! Random nonsense about Geminis here! Random nonsense about Geminis here! Random nonsense about Geminis here! Random nonsense about Geminis here! Random nonsense about Geminis here!
-  <div id="virgo">
-    <h1 id="astrology3">astrology 3</h1>
-      Random nonsense about Virgos here! Random nonsense about Virgos here! Random nonsense about Virgos here! Random nonsense about Virgos here! Random nonsense about Virgos here! Random nonsense about Virgos here! Random nonsense about Virgos here! Random nonsense about Virgos here! Random nonsense about Virgos here! Random nonsense about Virgos here! Random nonsense about Virgos here! Random nonsense about Virgos here! Random nonsense about Virgos here! Random nonsense about Virgos here!
-  <div id="scorpio">
-    <h1 id="astrology4">astrology 4</h1>
-      Random nonsense about Scorpios here! Random nonsense about Scorpios here! Random nonsense about Scorpios here! Random nonsense about Scorpios here! Random nonsense about Scorpios here! Random nonsense about Scorpios here! Random nonsense about Scorpios here! Random nonsense about Scorpios here! Random nonsense about Scorpios here! Random nonsense about Scorpios here! Random nonsense about Scorpios here! Random nonsense about Scorpios here! Random nonsense about Scorpios here!
+    <h1 id="astrology1">cigarettes</h1>
+      this is a photograph of a a pile of cigarettes on the corner of state street and ida b. wells drive for my first semester photographic practices 101 class. all four of these photos are from that assignment.
   </div>
-  <div id="pisces">
-    <h1 id="astrology5">astrology 5</h1>
-      Random nonsense about Pisces here! Random nonsense about Pisces here! Random nonsense about Pisces here! Random nonsense about Pisces here! Random nonsense about Pisces here! Random nonsense about Pisces here! Random nonsense about Pisces here! Random nonsense about Pisces here! Random nonsense about Pisces here! Random nonsense about Pisces here! Random nonsense about Pisces here! Random nonsense about Pisces here! Random nonsense about Pisces here! Random nonsense about Pisces here!
+  <div id="gemini">
+    <h1 id="astrology2">umbrella</h1>
+      i took this picture of the inside of my umbrella, that later broke from the weather, in my dorm room. this was my second favorite photo from that assignment because i liked how the shadows led to the bright center.
+  </div>
+  <div id="virgo">
+    <h1 id="astrology3">caution</h1>
+      this photo is of the bottom of one of the square poles behind the university center that was covered in stickers. that area behind the uc is one of my favorite places to photograph because there's so much going on back there.
+  </div>
+  <div id="scorpio">
+    <h1 id="astrology4">chicago</h1>
+      this is a picture of a section of one of the murals on wabash street. i was actually out with my freshman year roommate taking pictures of her for the assignment and randomly thought to take this close up.
+  </div>
 </div>
 
 </body>
